// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Modification > AdjustDwellTime renders empty correctly 1`] = `
<div>
  <SelectFeedRouteAndPatterns
    feeds={Array []}
    onChange={[Function]}
    routePatterns={Array []}
    routes={
      Array [
        "route1",
      ]
    }
    trips={
      Array [
        "abcd",
      ]
    }
  />
  <SelectStops
    modification={
      Object {
        "_id": "1234",
        "accessGroup": "accessGroupName",
        "bidirectional": false,
        "createdAt": "2017-11-08T12:30:50.133Z",
        "createdBy": "person@gmail.com",
        "description": "Mock description",
        "entries": Array [],
        "feed": "1",
        "name": "Test Modification",
        "nonce": "12345",
        "projectId": "1",
        "routes": Array [
          "route1",
        ],
        "segments": Array [
          {
  "fromStopId": "1",
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  },
  "properties": {},
  "spacing": "3000.00000000",
  "stopAtEnd": false,
  "stopAtStart": false,
  "type": "Feature"
},
        ],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "_id": "timetable-id",
            "dwellTime": 10,
            "dwellTimes": Array [
              12,
            ],
            "endTime": 57600,
            "exactTimes": false,
            "friday": true,
            "headwaySecs": 900,
            "modificationId": "1234",
            "modificationName": "Test Modification",
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "phaseAtStop": "",
            "phaseFromStop": "",
            "phaseFromTimetable": "",
            "phaseSeconds": 300,
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "updatedAt": "2017-11-08T12:31:19.602Z",
        "updatedBy": "person@gmail.com",
        "variants": Array [
          true,
        ],
      }
    }
    routeStops={Array []}
    selectedStops={Array []}
    setMapState={[MockFunction]}
    update={[MockFunction]}
  />
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-scale"
    >
      <input
        id="adjust-dwell-time-scale"
        onChange={[Function]}
        type="radio"
        value="scale"
      />
       
      Scale existing dwell times by
    </label>
  </div>
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-speed"
    >
      <input
        checked={true}
        id="adjust-dwell-time-speed"
        onChange={[Function]}
        type="radio"
        value="speed"
      />
       
      Set new dwell time to
    </label>
  </div>
  <NumberInput
    min={0}
    onChange={[Function]}
    units="seconds"
  />
</div>
`;

exports[`Component > Modification > AdjustDwellTime renders with data correctly 1`] = `
<div>
  <SelectFeedRouteAndPatterns
    feeds={Array []}
    onChange={[Function]}
    routePatterns={
      Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -122.0246,
                36.9707,
              ],
              Array [
                -122.0279,
                37.049,
              ],
              Array [
                -121.9799,
                37.2299,
              ],
              Array [
                -121.9445,
                37.324,
              ],
              Array [
                -121.936,
                37.353,
              ],
              Array [
                -121.924,
                37.365,
              ],
            ],
            "type": "LineString",
          },
          "name": "Mock Pattern",
          "pattern_id": "mock-pattern-id",
          "stops": Array [
            Object {
              "stop_id": "1",
              "stop_lat": 36.9707,
              "stop_lon": -122.0246,
              "stop_name": "Santa Cruz",
            },
            Object {
              "stop_id": "2",
              "stop_lat": 37.049,
              "stop_lon": -122.0279,
              "stop_name": "Scotts Valley",
            },
          ],
          "trips": Array [
            Object {
              "duration": 1234,
              "end_time": 13579,
              "start_time": 12345,
              "trip_headsign": "To Downtown",
              "trip_id": "abcd",
              "trip_short_name": "The Express",
            },
          ],
        },
      ]
    }
    routes={
      Array [
        "route1",
      ]
    }
    trips={
      Array [
        "abcd",
      ]
    }
  />
  <SelectStops
    modification={
      Object {
        "_id": "1234",
        "accessGroup": "accessGroupName",
        "bidirectional": false,
        "createdAt": "2017-11-08T12:30:50.133Z",
        "createdBy": "person@gmail.com",
        "description": "Mock description",
        "entries": Array [],
        "feed": "1",
        "name": "Test Modification",
        "nonce": "12345",
        "projectId": "1",
        "routes": Array [
          "route1",
        ],
        "segments": Array [
          {
  "fromStopId": "1",
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  },
  "properties": {},
  "spacing": "3000.00000000",
  "stopAtEnd": false,
  "stopAtStart": false,
  "type": "Feature"
},
        ],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "_id": "timetable-id",
            "dwellTime": 10,
            "dwellTimes": Array [
              12,
            ],
            "endTime": 57600,
            "exactTimes": false,
            "friday": true,
            "headwaySecs": 900,
            "modificationId": "1234",
            "modificationName": "Test Modification",
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "phaseAtStop": "",
            "phaseFromStop": "",
            "phaseFromTimetable": "",
            "phaseSeconds": 300,
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "updatedAt": "2017-11-08T12:31:19.602Z",
        "updatedBy": "person@gmail.com",
        "variants": Array [
          true,
        ],
      }
    }
    routeStops={Array []}
    selectedStops={Array []}
    setMapState={[MockFunction]}
    update={[MockFunction]}
  />
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-scale"
    >
      <input
        id="adjust-dwell-time-scale"
        onChange={[Function]}
        type="radio"
        value="scale"
      />
       
      Scale existing dwell times by
    </label>
  </div>
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-speed"
    >
      <input
        checked={true}
        id="adjust-dwell-time-speed"
        onChange={[Function]}
        type="radio"
        value="speed"
      />
       
      Set new dwell time to
    </label>
  </div>
  <NumberInput
    min={0}
    onChange={[Function]}
    units="seconds"
  />
</div>
`;
